Use wildcard classpath instead of java.ext.dirs