@@ -1,7 +1,6 @@
 @echo off
 set TOPDIR=%~dp0..
-set OPTS=-Xmx512m
+set OPTS=
 set MAIN_CLASS=net.sourceforge.pmd.cpd.GUI
 
-java %OPTS% -Djava.ext.dirs="%TOPDIR%\lib" %MAIN_CLASS% %*
-
+java -classpath %TOPDIR%\lib\* %OPTS% %MAIN_CLASS% %*
